# gnome-gtk-text-editor

./: README.md  dev.luancgs.TextEditor.json  meson.build
data/: dev.luancgs.TextEditor.appdata.xml.in  dev.luancgs.TextEditor.desktop.in  dev.luancgs.TextEditor.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  texteditor-application.c  texteditor-application.h  texteditor-window.c  texteditor-window.h  texteditor-window.ui  texteditor.gresource.xml
